get working for android

--- a/app.json
+++ b/app.json
@@ -38,6 +38,12 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
+      ],
+      [
+        "expo-location",
+        {
+          "locationWhenInUsePermission": "Allow station compass to use your location."
+        }
       ]
     ],
     "experiments": {
